PY-79067 Allow creating `PyCallableType` directly with `PyCallableParameterVariadicType` instead of wrapping it in the list of callable parameters
This refactoring allows simplifying and unifying logic whilst calculating substitutions for callable types and its matching in `PyTypeChecker`

GitOrigin-RevId: e61bd1f6cf19539b0a66ff2e3e47164aec0c0aa1